cluster/folderservice-db-statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: folderservice-db
  labels:
    component: folderservice
    module: folderservice-db
spec:
  ports:
  - port: 5432
    name: http
  clusterIP: None
  selector:
    component: folderservice
    module: folderservice-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: folderservice-postgres
  labels:
    component: folderservice
    module: folderservice-db
spec:
  serviceName: folderservice-db
  replicas: 1
  selector:
    matchLabels:
      component: folderservice
      module: folderservice-db
  template:
    metadata:
      labels:
        component: folderservice
        module: folderservice-db
    spec:
      containers:
      - name: folderservice-db-container
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: http
        volumeMounts:
        - name: folderservice-db-volume
          mountPath: /var/lib/postgresql/data/
  volumeClaimTemplates:
  - metadata:
      name: folderservice-db-volume
      labels:
        component: folderservice
        module: folderservice-db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
