cluster/folderservice-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: folderservice
  labels:
    component: folderservice
    module: folderservice-app
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    component: folderservice
    module: folderservice-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: folderservice
  labels:
    component: folderservice
    module: folderservice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: folderservice
      module: folderservice-app
  template:
    metadata:
      labels:
        component: folderservice
        module: folderservice-app
    spec:
      containers:
        - name: folderservice-app
          image: folderservice:local
          imagePullPolicy: Never
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 800Mi
